--- a/src/Households/Households.css
+++ b/src/Households/Households.css
@@ -41,13 +41,14 @@
 }
 
 .house-details-linebreak {
-    width: 100%;
+    width: 99%;
     right: 0;
     border: solid 1px lightgrey;
 }
 
 #house-details-title {
     font-size: 36pt;
+    height: 1.2em;
     margin-left: .3em;
     margin-top: .3em;
 }
@@ -76,7 +77,7 @@
 .hdm-circle-name {
     font-size: 14pt;
     text-align: center;
-    height: 1em;
+    height: 1.2em;
     width: 5.14em;
     top: .15em;
     margin-left: 2.57em;
@@ -104,6 +105,7 @@
     margin-top: auto;
     margin-bottom: auto;
     border-radius: .1em;
+    outline: none;
 }
 
 .house-details-nav-button:hover {
@@ -117,6 +119,7 @@
 #add-house {
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
 .add-filler {
@@ -125,6 +128,7 @@
 
 #add-house-title-form {
     font-size: 36pt;
+    height: 1.2em;
     margin-left: .3em;
     margin-top: .3em;
     border-radius: .1em;
@@ -161,7 +165,7 @@
 
 .add-house-new-member-form {
     font-size: 14pt;
-    height: 1em;
+    height: 1.2em;
     width: 5.14em;
     margin-left: 2.57em;
     margin-top: .2em;
@@ -181,6 +185,22 @@
 }
 
 #ahnm-submit:hover {
+    background-color: lightgrey;
+}
+
+#add-house-submit {
+    position: relative;
+    float: right;
+    height: 4em;
+    width: 12em;
+    right: 3em;
+    top: 18em;
+    background-color: transparent;
+    border: solid 1px lightgrey;
+    border-radius: 1em;
+}
+
+#add-house-submit:hover {
     background-color: lightgrey;
 }
 
