--- a/src/Chores/Chores.css
+++ b/src/Chores/Chores.css
@@ -30,19 +30,20 @@
     margin-top: 20%;
 }
 
-.chore-type-btn {
+.chore-button {
     padding: 5%;
     margin-bottom: 8%;
     border: 2px solid lightgrey;
     background-color: transparent;
     border-radius: 10px;
-}
-
-.chore-type-btn:focus {
     outline: none;
 }
 
-.chore-type-btn-selected {
+.chore-button:hover {
+    background-color: lightgrey;
+}
+
+.chore-button-selected {
     background-color: lightgrey;
 }
 
@@ -68,26 +69,15 @@
     margin-top: 0;
 }
 
-#dow-picker li {
-    border-radius: 10%;
-    background-color: transparent;
-}
-
-#dow-picker li:hover {
-    background-color: lightgrey;
-}
-
-.dow-chevron {
-    padding-top: 25%;
-}
-
 .dow-button {
     font-size: 36pt;
-    height: 100%;
-    width: 100%;
+    height: 1.2em;
+    width: 1.4em;
     border: none;
-    border-radius: 10%;
+    padding-top: .1em;
+    border-radius: .1em;
     background-color: transparent;
+    text-align: center;
 }
 
 .dow-button:hover {
@@ -102,32 +92,32 @@
     background-color: lightgrey;
 }
 
-#house-select {
+#column-filter {
     width: 45rem;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1em;
 }
 
-.house-button-calendar {
+.column-button-calendar {
     border: none;
     outline: none;
     background-color: transparent;
     border-radius: .5em;
 }
 
-.house-button-list {
+.column-button-list {
     border: none;
     outline: none;
     background-color: transparent;
     border-radius: .5em;
 }
 
-.house-button-list:hover {
+.column-button-list:hover {
     background-color: lightgrey;
 }
 
-.house-button-list-selected {
+.column-button-list-selected {
     background-color: lightgrey;
 }
 
@@ -303,4 +293,10 @@
 
 #calendar-icon {
 
+}
+
+#schedule-buttons {
+    display: flex;
+    flex-direction: column;
+    margin-top: 108%;
 }
