--- a/src/Notifications/Notifications.css
+++ b/src/Notifications/Notifications.css
@@ -1,14 +1,96 @@
-#notif {
+#notifications {
+    position: relative;
+    height: 100%;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
     flex-direction: row;
 }
 
 #feed {
-    flex-basis: 70%;
-    border-right: solid black;
+    position: relative;
+    height: 100%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    border-right: solid lightgrey 1px;
+    overflow-y: scroll;
+}
+
+#feed-filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 8%;
+    border-bottom: solid lightgrey 1px;
 }
 
 #options {
-    flex-basis: 30%;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.option-button {
+    width: 95%;
+    flex-basis: 10%;
+    background-color: transparent;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    border: solid lightgrey 1px;
+    border-radius: .5em;
+    outline: none;
+    text-align: center;
+}
+
+.option-button:hover {
+    background-color: lightgrey;
+}
+
+.option-button-selected {
+    background-color: lightgrey;
+}
+
+.submit-message {
+    border-top: solid lightgrey 1px;
+    border-bottom: solid lightgrey 1px;
+    flex-basis: 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+#submit-box {
+    margin-left: 2em;
+}
+
+.submit-box-text {
+    text-align: center;
+    font-size: 18pt;
+    margin-top: 2em;
+}
+
+.box-on-drag {
+    border: dashed grey 4px;
+    background-color: rgba(255,255,255,.8);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+}
+
+.box-off-drag {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    text-align: center;
+    color: grey;
+}
+
+.submit-title {
+    font-size: 18pt;
+    margin-left: 1em;
 }
